fix: Reduced CLS by removing downloaded fonts.
- Reduces page load significantly.
- Cumulative Layout Shift reduced to just 0.001s from 3.8s.

--- a/src/_includes/css/styles.css
+++ b/src/_includes/css/styles.css
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: 'Comfortaa';
-  src: local('Comfortaa'), url('/assets/fonts/Comfortaa.ttf') format('truetype');
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'OpenDyslexic';
-  src: local('Comfortaa'),
-    url('/assets/fonts/OpenDyslexic-Regular.otf') format('opentype');
-  font-style: normal;
-  font-display: swap;
-}
-
 html {
   --light: #d2d6da;
   --light-alternate: #255d75;
@@ -27,8 +12,8 @@ html {
   --text-color-invert: var(--light);
   --accent: var(--light-accent);
 
-  --default-font: 'Comfortaa', sans-serif;
-  --dyslexic-font: 'OpenDyslexic', sans-serif;
+  --default-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   --section-padding: min(calc(1rem + 1vw), 2.5rem);
 
